<resources>
    <string name="app_name">Evolve</string>
    <string name="start_routine">Start A Routine</string>

    <string name="action_settings">Settings</string>
    <string name="action_my_exercises">My Exercises</string>
    <string name="action_my_routines">My Routines</string>
    <string name="action_stats">Stats</string>

    <string name="title_activity_new_routine">New Routine</string>
    <string name="title_activity_start_routine">Start Routine</string>
    <string name="title_activity_my_routines">My Routines</string>
    <string name="title_activity_active_routine_session">Active Routine Session</string>
    <string name="title_activity_add_exercise">Add Exercise</string>
    <string name="title_activity_create_routine">Create Routine</string>
    <string name="title_activity_create_exercise">Create Exercise</string>

    <string name="button_start_new_routine">Start New Routine</string>
    <string name="button_add_new_routine">Add New Routine</string>

    <string name="text_saved_routines_title">Saved Routines</string>
    <string name="text_active_exercise_sessions_title">Exercises</string>
    <string name="text_no_saved_routines">No Saved Routines</string>
    <string name="active_routine_session_date_title">Date</string>
    <string name="active_routine_session_date">1/1/1</string>
    <string name="active_routine_session_notes_title">Notes</string>

    <string name="text_button_add_exercise">Add Exercise</string>


    <!-- Create Exercise Activity Strings -->
    <string name="units_layout_title">Unit System</string>
    <string name="imperial_toggle_button_text">Imperial</string>
    <string name="metric_toggle_button_text">Metric</string>
    <string name="tracked_measurements_layout_title">Tracked Measurements</string>
    <string name="reps_toggle_button_text">Reps</string>
    <string name="weight_toggle_button_text">Weight</string>
    <string name="distance_toggle_button_text">Distance</string>
    <string name="time_toggle_button_text">Time</string>
    <string name="starting_measurements_layout_title">Starting Measurements</string>
    <string name="reps_layout_title">Reps</string>
    <string name="weight_layout_title">Weight</string>
    <string name="distance_layout_title">Distance</string>
    <string name="time_layout_title">Time</string>
    <string name="target_increase_layout_title">Target for Increase</string>
    <string name="increse_per_session_layout_title">Increase per Session</string>
    <string name="category_layout_title">Category</string>
    <string name="weight_imperial_unit">lbs</string>
    <string name="weight_metric_unit">kgs</string>
    <string name="reps_unit">reps</string>
    <string name="hours_edittext_hint">hh</string>
    <string name="minutes_edittext_hint">mm</string>
    <string name="seconds_edittext_hint">ss</string>
    <string name="title_edittext_hint">Title</string>

    <string name="button_create_new_exercise_text">Create New Exercise</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="text_no_saved_exercises">No Saved Exercises</string>
    <string name="hint_description">Description</string>
    <string name="hint_title">Title</string>
    <string name="hint_notes">My workout notes</string>
    <string name="set_title">Set</string>
    <string name="start_page_banner">Evolve</string>
    <string name="component_testing_button_text">Component Testing</string>
    <string name="start_a_routine_button_text">Start A Routine</string>
    <string name="text_no_sets">Add a set</string>
    <string name="text_button_add_set">Add Set</string>
    <string name="text_button_next_set">Next Set</string>
    <string name="menu_prevoius_exercise_title">Previous Exercise</string>
    <string name="menu_next_exercise_title">Next Exercise</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_finish_routine_session">Are you sure you want to finish your workout?</string>
    <string name="text_no_exercise_sessions">Add an exercise</string>
    <string name="text_last_performed">Last Performed</string>
    <string name="placeholder_number">1</string>
    <string name="text_times_performed">Times Performed</string>

    <string name="text_stat_category_column">Category</string>
    <string name="text_stat_avg_column_title">Avg</string>
    <string name="text_stat_max_column_title">Max</string>
    <string name="placeholder_text">text</string>
    <string name="text_no_stats">No Stats Recorded</string>
    <string name="title_exercise_stats">Stats</string>
    <string name="description_current_set">Current Set</string>
    <string name="text_clear_data">Clear Data</string>
    <string name="text_never">Never</string>


    <string name="text_empty_view_exercise_history">No Exercise History</string>
    <string name="text_fragment_exercise_history_title">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_empty_view_routine_history">No Routine History</string>
    <string name="text_view_routine_exercises_banner">Exercises</string>
    <string name="text_increase_per_session">Increase Per Session</string>
    <string name="title_activity_feedback_page">FeedbackPage</string>
    <string name="give_feedback_message">Thanks for downloading Evolve Workout Logger. If you\'d like to give feedback to help improve the app, please take the alpha test survey:</string>
    <string name="survey_button_text">Go to survey</string>
    <string name="action_give_feedback">Give Feedback</string>
    <string name="survey_taken_message">Thanks for your feedback!</string>
    <string name="survey_url">"https://www.surveymonkey.com/r/XK599MZ"</string>

</resources>
