<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:id="@+id/set_layout">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/set_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_title"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/MediumDisplayText"
                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
            <View
                style="@style/Divider.Vertical"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/reps_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reps_layout_title"
                    android:layout_gravity="center_horizontal|center_vertical"
                    style="@style/MediumDisplayText"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/weight_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_layout_title"
                    android:layout_gravity="center_horizontal|center_vertical"
                    style="@style/MediumDisplayText"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/distance_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_layout_title"
                    android:layout_gravity="center_vertical"
                    style="@style/MediumDisplayText"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/time_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_layout_title"
                    android:layout_gravity="center_horizontal|center_vertical"
                    style="@style/MediumDisplayText"/>
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_below="@id/set_layout"/>

</RelativeLayout>