<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/title_exercise_stats"
        android:id="@+id/stats_title"
        style="@style/ColoredTitleHeader">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_below="@+id/stats_title"
        android:id="@+id/stat_layout">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/text_stat_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stat_category_column"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/MediumDisplayText"
                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
            <View
                style="@style/Divider.Vertical"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/reps_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_stat_avg_column_title"
                    android:layout_gravity="center_horizontal|center_vertical"
                    style="@style/MediumDisplayText"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/weight_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_stat_max_column_title"
                    android:layout_gravity="center_horizontal|center_vertical"
                    style="@style/MediumDisplayText"/>
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <View style="@style/Divider.Horizontal"
        android:layout_below="@id/stat_layout"/>

</RelativeLayout>