<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/last_performed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_line_list_tb_padding"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/last_performed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:layout_marginLeft="@dimen/single_line_list_lr_padding"
                android:layout_marginStart="@dimen/single_line_list_lr_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:text="@string/text_last_performed"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/date_last_performed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:text="@string/placeholder_number"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/times_performed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/times_performed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:layout_marginLeft="@dimen/single_line_list_lr_padding"
                android:layout_marginStart="@dimen/single_line_list_lr_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:text="@string/text_times_performed"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/number_times_performed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:text="@string/placeholder_number"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/increasePerSessionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/single_line_list_tb_padding"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/increasePerSessionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:layout_marginLeft="@dimen/single_line_list_lr_padding"
                android:layout_marginStart="@dimen/single_line_list_lr_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:text="@string/text_increase_per_session"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/increasePerSessionAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:text="@string/placeholder_number"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>