<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_line_list_tb_padding"
        android:id="@+id/last_performed_layout"
        android:baselineAligned="false">
        <FrameLayout
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text_last_performed"
                android:layout_marginLeft="@dimen/single_line_list_lr_padding"
                android:layout_marginStart="@dimen/single_line_list_lr_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:id="@+id/last_performed_text">
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:text="@string/placeholder_number"
                android:id="@+id/date_last_performed">
            </TextView>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/single_line_list_tb_padding"
        android:id="@+id/times_performed_layout"
        android:baselineAligned="false">
        <FrameLayout
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text_times_performed"
                android:layout_marginLeft="@dimen/single_line_list_lr_padding"
                android:layout_marginStart="@dimen/single_line_list_lr_padding"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:id="@+id/times_performed_text">
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/single_line_list_tb_padding"
                android:layout_marginBottom="@dimen/single_line_list_tb_padding"
                android:text="@string/placeholder_number"
                android:id="@+id/number_times_performed">
            </TextView>
        </FrameLayout>
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="edu.umn.paull011.evolveworkoutlogger.fragments.ExerciseStatsFragment"
        android:id="@+id/fragment_exercise_stats"
        android:layout_gravity="center_horizontal"
        tools:layout="@layout/fragment_exercise_stats" />

</LinearLayout>